Add hover highlighting to game.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <canvas width=1024 height=768 ></canvas>
+    <canvas width=1024 height=768 id="gamecanvas"></canvas>
 
     <script defer src="js/utils.js"></script>
     <script defer src="js/script.js"></script>
